2019-10-21 Wiley E. Hill <wileyhill@gmail.com>

    * tests/test_menu_separator.c: Check response from GedaMenuItem
      accessors:

          * geda_menu_item_get_reserve_indicator

2019-10-18 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_option_menu.c: Revise geda_option_menu_get_history to
      eliminate early returns.

2019-10-17 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_option_menu.c: Replace return with break in function
      geda_option_menu_select_first_sensitive.

2019-10-16 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu_item.c: Revise geda_menu_item_set_accel_path to
      use accessor geda_menu_get_accel_group and eliminate ancillary pointer.

2019-10-15 Wiley E. Hill <wileyhill@gmail.com>

    * src/functions/geda_container.c: And half_height in geda_container_
      focus_sort_left_right, and half_width in geda_container_focus_sort_
      up_down. Replace GINT_TO_POINTER with INT_TO_POINTER in geda_container_
      focus_sort_tab.

2019-10-14 Wiley E. Hill <wileyhill@gmail.com>

    * src/functions/geda_container.c: Convert comments to internal Doxygen
      documentation.

2019-10-10 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_combobox.c: Convert plain text to internal Doxygen
      documentation, add internal documentation.

2019-10-09 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_font_dialog.c: Add geda_font_dialog_set_font.

    * tests/test_font_dialog.c: Add checks for:

          * geda_font_dialog_get_font
          * geda_font_dialog_set_font

2019-10-08 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_option_menu.c: Add ancillary bwidth_x2 in geda_option_
      menu_size_allocate and explicitly shift left to multiply by 2. Add
      ancillary menu_shell in geda_option_menu_key_press. Add ancillaries
      xpad and ypad in geda_option_menu_paint and explicitly shift left to
      multiply by 2.

2019-10-07 Wiley E. Hill <wileyhill@gmail.com>
